2001-03-17  Anthony Green  <green@redhat.com>

	* config/pj/lib1funcs.S: Fix broken comment.
	* config/pj/pj.h (LOCAL_LABEL_PREFIX): Prefix internal
	labels with '.'.

2001-03-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.texi: Remove obsolete information relating to build and
	installation problems with enquire or the Pyramid C compiler.

2001-03-17  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (queue_reg_save): New.
	(flush_queued_reg_saves, clobbers_queued_reg_save): New.
	(dwarf2out_frame_debug_expr): Call queue_reg_save instead of
	dwarf2out_reg_save.
	(dwarf2out_frame_debug): Call flush_queued_reg_saves when needed.
	(cfa, cfa_store, cfa_temp): Make static.
	* final.c (final_scan_insn): Always call dwarf2out_frame_debug.

2001-03-17  Richard Henderson  <rth@redhat.com>

	* integrate.h (struct inline_remap): Add local_return_label.
	* integrate.c (expand_inline_function): Initialize it and emit
	it after copy_insn_notes.
	(copy_insn_list): Don't store local_return_label here.
	(copy_insn_notes): New function split out from copy_insn_list.

2001-03-17  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (lookup_filename): Emit .file if the assembler
	is generating .debug_line.
	(dwarf2out_init): Add main_input_filename to the file table first.
	* configure.in (as_dwarf2_debug_line): Test with file number 1
	instead of file number 0.

Sat Mar 17 11:52:34 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* combine.c (undobuf): Remove field previous_undos; all refs deleted.
	(gen_rtx_combine): Deleted; all references changed as appropriate.
	(gen_unary): Deleted; all refs changed to call simplify_gen_unary.

	* print-tree.c (print_node): Print DECL_NONADDRESSABLE_P.

2001-03-17  David Billinghurst  <David.Billinghurst@riotinto.com>

	* config/i386/xm-cygwin.h: Include <sys/cygwin.h.  Remove unused
	variable.

2001-03-16  Jim Wilson  <wilson@redhat.com>

	* config/ia64/ia64.c (ia64_compute_frame_size): If reg_fp is zero,